# citation-provenance-paper

./: .env.example  .gitignore  LICENSE  README.md  index.html  process_scite.html  pyproject.toml  results.html
data/: als_dois.txt  top_100.csv
notebooks/: collect_scite_data.ipynb  data_exploration.ipynb  exploration_01.ipynb  exploration_weighted_citation_counts.ipynb  process_scite.ipynb  results.ipynb
scripts/: 2_collect_scite.py  3_process_scite.py
src/foobar/: __init__.py
src/foobar/PyScite/: scite.py
src/pyscite/: scite.py
src/scite_dev/: scite.py
