[tool.poetry]
name = "content-based-citations"
version = "0.1.0"
description = ""
authors = ["bubblbu <asura.enkhbayar@gmail.com>"]
packages = [
    { include = "pyscite", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
requests = "^2.24.0"
seaborn = "^0.11.0"
tqdm = "^4.51.0"
scikit-learn = "^0.23.2"
python-dotenv = "^0.15.0"
ndjson = "^0.3.1"
ratelimit = "^2.2.1"
pandas-profiling = "^2.9.0"
xlrd = "^2.0.1"
python-Levenshtein = "^0.12.0"

[tool.poetry.dev-dependencies]
ipykernel = "^5.3.4"
ipywidgets = "^7.5.1"
flake8 = "^3.8.4"
pycodestyle = "^2.6.0"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
